[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/EditorLayout.png" type="Texture" id=1]
[ext_resource path="res://assets/Objects/Earth.png" type="Texture" id=2]
[ext_resource path="res://assets/Objects/ToxicCan.png" type="Texture" id=3]
[ext_resource path="res://assets/Objects/Stairs.png" type="Texture" id=4]
[ext_resource path="res://assets/Objects/Earth1.png" type="Texture" id=5]
[ext_resource path="res://assets/Objects/ExplosiveCanBroken.png" type="Texture" id=6]
[ext_resource path="res://assets/Objects/ExplosiveCan.png" type="Texture" id=7]
[ext_resource path="res://assets/Objects/ToxicCanBroken.png" type="Texture" id=8]
[ext_resource path="res://scripts/Editor.gd" type="Script" id=9]
[ext_resource path="res://assets/akashi.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://assets/Objects/Spawnpoint.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=4]
size = 14
font_data = ExtResource( 10 )

[node name="Editor" type="Node2D"]
script = ExtResource( 9 )

[node name="Objects" type="Node2D" parent="."]

[node name="ViewCenter" type="Node2D" parent="."]
position = Vector2( 512, 300 )

[node name="Camera2D" type="Camera2D" parent="ViewCenter"]
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="ViewCenter/Camera2D"]
offset = Vector2( 512, 300 )
transform = Transform2D( 1, 0, 0, 1, 512, 300 )

[node name="Layout" type="Sprite" parent="ViewCenter/Camera2D/CanvasLayer"]
position = Vector2( 0, 3.05176e-05 )
scale = Vector2( 2, 2 )
z_index = -1
texture = ExtResource( 1 )

[node name="PositionLabel" type="Label" parent="ViewCenter/Camera2D/CanvasLayer"]
margin_left = -509.0
margin_top = -297.0
margin_right = -466.0
margin_bottom = -278.0
custom_fonts/font = SubResource( 1 )
text = "(0, 0)"

[node name="SavedLabel" type="RichTextLabel" parent="ViewCenter/Camera2D/CanvasLayer"]
margin_left = -511.0
margin_top = 120.0
margin_right = 50.0
margin_bottom = 178.0
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[color=#00FFFFFF]Level saved to XXX[/color]"
text = "Level saved to XXX"

[node name="EarthButton" type="Button" parent="ViewCenter/Camera2D/CanvasLayer"]
margin_left = -482.0
margin_top = 190.0
margin_right = -436.0
margin_bottom = 236.0
flat = true

[node name="EarthItem" type="Sprite" parent="ViewCenter/Camera2D/CanvasLayer"]
position = Vector2( -459, 213 )
scale = Vector2( 1.4375, 1.4375 )
texture = ExtResource( 2 )

[node name="Earth1Button" type="Button" parent="ViewCenter/Camera2D/CanvasLayer"]
margin_left = -428.0
margin_top = 190.0
margin_right = -382.0
margin_bottom = 236.0
flat = true

[node name="Earth1Item" type="Sprite" parent="ViewCenter/Camera2D/CanvasLayer"]
position = Vector2( -405, 213 )
scale = Vector2( 1.4375, 1.4375 )
texture = ExtResource( 5 )

[node name="ExplosiveCanButton" type="Button" parent="ViewCenter/Camera2D/CanvasLayer"]
margin_left = -266.0
margin_top = 190.0
margin_right = -220.0
margin_bottom = 236.0
flat = true

[node name="ExplosiveCanItem" type="Sprite" parent="ViewCenter/Camera2D/CanvasLayer"]
position = Vector2( -243, 213 )
scale = Vector2( 1.4375, 1.4375 )
texture = ExtResource( 7 )

[node name="ExplosiveCanBrokenButton" type="Button" parent="ViewCenter/Camera2D/CanvasLayer"]
margin_left = -212.0
margin_top = 190.0
margin_right = -166.0
margin_bottom = 236.0
flat = true

[node name="ExplosiveCanBrokenItem" type="Sprite" parent="ViewCenter/Camera2D/CanvasLayer"]
position = Vector2( -189, 213 )
scale = Vector2( 1.4375, 1.4375 )
texture = ExtResource( 6 )

[node name="SpawnpointButton" type="Button" parent="ViewCenter/Camera2D/CanvasLayer"]
margin_left = -104.0
margin_top = 190.0
margin_right = -58.0
margin_bottom = 236.0
flat = true

[node name="SpawnpointItem" type="Sprite" parent="ViewCenter/Camera2D/CanvasLayer"]
position = Vector2( -81, 213 )
scale = Vector2( 1.4375, 1.4375 )
texture = ExtResource( 11 )

[node name="StairsButton" type="Button" parent="ViewCenter/Camera2D/CanvasLayer"]
margin_left = -157.0
margin_top = 190.0
margin_right = -113.0
margin_bottom = 236.0
flat = true

[node name="StairsItem" type="Sprite" parent="ViewCenter/Camera2D/CanvasLayer"]
position = Vector2( -135, 213 )
scale = Vector2( 1.4375, 1.4375 )
texture = ExtResource( 4 )

[node name="ToxicCanButton" type="Button" parent="ViewCenter/Camera2D/CanvasLayer"]
margin_left = -374.0
margin_top = 190.0
margin_right = -328.0
margin_bottom = 236.0
flat = true

[node name="ToxicCanItem" type="Sprite" parent="ViewCenter/Camera2D/CanvasLayer"]
position = Vector2( -351, 213 )
scale = Vector2( 1.4375, 1.4375 )
texture = ExtResource( 3 )

[node name="ToxicCanBrokenButton" type="Button" parent="ViewCenter/Camera2D/CanvasLayer"]
margin_left = -321.0
margin_top = 189.0
margin_right = -273.0
margin_bottom = 236.0
flat = true

[node name="ToxicCanBrokenItem" type="Sprite" parent="ViewCenter/Camera2D/CanvasLayer"]
position = Vector2( -297, 213 )
scale = Vector2( 1.4375, 1.4375 )
texture = ExtResource( 8 )

[connection signal="pressed" from="ViewCenter/Camera2D/CanvasLayer/EarthButton" to="." method="_on_EarthButton_pressed"]
[connection signal="pressed" from="ViewCenter/Camera2D/CanvasLayer/Earth1Button" to="." method="_on_Earth1Button_pressed"]
[connection signal="pressed" from="ViewCenter/Camera2D/CanvasLayer/ExplosiveCanButton" to="." method="_on_ExplosiveCanButton_pressed"]
[connection signal="pressed" from="ViewCenter/Camera2D/CanvasLayer/ExplosiveCanBrokenButton" to="." method="_on_ExplosiveCanBrokenButton_pressed"]
[connection signal="pressed" from="ViewCenter/Camera2D/CanvasLayer/SpawnpointButton" to="." method="_on_SpawnpointButton_pressed"]
[connection signal="pressed" from="ViewCenter/Camera2D/CanvasLayer/StairsButton" to="." method="_on_StairsButton_pressed"]
[connection signal="pressed" from="ViewCenter/Camera2D/CanvasLayer/ToxicCanButton" to="." method="_on_ToxicCanButton_pressed"]
[connection signal="pressed" from="ViewCenter/Camera2D/CanvasLayer/ToxicCanBrokenButton" to="." method="_on_ToxicCanBrokenButton_pressed"]
